# lrctotranslateQuick2

./: CMakeLists.txt  Main.qml  README.md  TextAreaNormal.qml  VersionInfo.rc.in  lrctotranslateQuick2.pro  lyrichelper.cpp  lyrichelper.h  main.cpp  main.qml  operatemgr.cpp  operatemgr.h  operator.cpp  operator.h  qml.qrc  qtquickcontrols2.conf
.github/workflows/: android.yml  ios.yml  macos.yml  ubuntu.yml  windows-arm64.yml  windows-mingw.yml  windows.yml
android/: AndroidManifest.xml
